background 2 and text added

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,7 +71,13 @@ small {
                
     }
 
- 
+    .bottom-left {
+      position: absolute;
+      bottom: 8px;
+      left: 16px;
+    }
+      
+   
 
    
   
