--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,92 +1,97 @@
 /* Container holding the image and the text */
 .background-1 {
-    /* The image used */
-    /*background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true");
+  /* The image used */
+  /*background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true");
 
     /* Full height */
-    height: 50%; 
-  
-    /* Center and scale the image nicely */
-    background-position:relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color:brown;
- 
-    
-  }
+  height: 100%;
 
-  .container-xl {
-    max-width: 1000px;
-    margin: 0 auto;
-    gap: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-  
-  }
-  h3 {
-    text-align: center;
-    font-style: oblique;
-    padding-bottom: 1rem;
-    color: rgba(6, 5, 5, 0.909);
-  }
+  /* Center and scale the image nicely */
+  background-position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: brown;
 
-  
-.text-center{
-  font-style: italic;
-  color:rgba(6, 5, 5, 0.909);
+
+}
+
+.container-xl {
+  position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
+  gap: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+
+}
+
+h3 {
+  text-align: center;
+  font-style: oblique;
+  padding-bottom: 1rem;
+  color: rgba(6, 5, 5, 0.909);
+}
+
+
+.text-center {
+  font-style: normal;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgba(6, 5, 5, 0.909);
   text-align: center;
 }
-  
-  .hero-text-1 {
-    text-align: center;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: smaller;
-    }
-  
-    .logo {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
 
-    .background-2 {
-      /* The image used */
-      /*background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true");
+.hero-text-1 {
+  text-align: center;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: smaller;
+}
+
+.logo {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.background-2 {
+  /* The image used */
+  /*background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true");
   
       /* Full height */
-      height: 50%; 
-    
-      /* Center and scale the image nicely */
-      background-position:relative;
-      background-repeat: no-repeat;
-      background-size: cover;
-               
-    }
+  height: 50%;
 
-    .header {
-      text-align: center;
-      color: white;
-      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: smaller;
-      }
-    
-    .services {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: smaller;
-    }
-   
+  /* Center and scale the image nicely */
+  background-position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-   
-  
+}
+
+.header {
+  text-align: center;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: smaller;
+}
+
+
+
+#div1 .services {
+  text-align: center;
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.row{
+  background-color: brown;
+}
