--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,11 @@
 /* Container holding the image and the text */
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .background-1 {
   /* The image used */
   /*background-image: url("https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true");
@@ -19,11 +26,11 @@
   position: relative;
   max-width: 1000px;
   margin: 0 auto;
-  gap: 2rem;
+  /* gap: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 2rem; */
 
 }
 
@@ -95,3 +102,7 @@ h3 {
 .row{
   background-color: brown;
 }
+
+/* .col-lg {
+  min-width: 0;
+} */
