--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,7 +36,7 @@
 
 h3 {
   text-align: center;
-  font-style: oblique;
+  font-style: normal;
   padding-bottom: 1rem;
   color: rgba(6, 5, 5, 0.909);
 }
@@ -114,4 +114,12 @@ h3 {
   width: 100%;
   margin-bottom: 40px;
   
+}
+#div2 .Contacts {
+  text-align: center;
+  position: absolute;
+  color: white;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
