--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -119,7 +119,21 @@ h3 {
   text-align: center;
   position: absolute;
   color: white;
-  top: 20%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.form-control {
+width: 100%;
+}
+
+
+
+input[type="text"]{
+  background: transparent;
+}
+
+input[type="text"]:focus{
+  background: transparent;
 }
