--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,6 +88,20 @@ h3 {
   font-size: smaller;
 }
 
+.icon-container {
+  display: flex;
+  justify-content: space-around;
+}
+.icon {
+  text-align: center;
+  cursor: pointer;
+}
+.description {
+  display: none;
+  font-weight: bold;
+  text-align: center;
+}
+
 
 
 #div1 .services {
@@ -100,7 +114,7 @@ h3 {
 }
 
 .row{
-  background-color:;
+  background-color:none;
   padding-left: 10%;
   padding-right: 10%;
 }
