--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -104,6 +104,8 @@ h3 {
 
 
 
+
+
 #div1 .services {
   text-align: center;
   position: absolute;
@@ -123,12 +125,7 @@ h3 {
   min-width: 0;
 } */
 
-.thumbnail {
- /* float: left;*/
-  width: 100%;
-  margin-bottom: 40px;
-  
-}
+
 #div2 .Contacts {
   text-align: center;
   position: absolute;
@@ -138,11 +135,11 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
-.form-control {
-width: 100%;
+
+.form-control#textarea{
+  height:150px;
+  align-content: center;
 }
-
-
 
 input[type="text"]{
   background: transparent;
@@ -150,4 +147,31 @@ input[type="text"]{
 
 input[type="text"]:focus{
   background: transparent;
+}
+
+.project {
+  position: relative;
+  display: inline-block;
+}
+
+.project img {
+  display: block;
+  max-width: 100%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  transition: opacity 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.project:hover .overlay {
+  opacity: 1;
 }
