--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,19 @@
 
 }
 
+.relative_parent{
+  position: relative;
+  background: green;
+}
+
+.my-image{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+}
+
 .container-xl {
   position: relative;
   max-width: 1000px;
@@ -127,13 +140,20 @@ h3 {
 } */
 
 
-#div2 .Contacts {
+#div2 .contacts {
   text-align: center;
   position: absolute;
   color: white;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
 
 
@@ -186,4 +206,16 @@ input[type="text"]:focus{
 
 .end{
   text-align: center;
+}
+
+form{
+   width: 100%;
+}
+
+.form-submit{
+  visibility: hidden;
+}
+
+.footer-section{
+  position: relative;
 }
