--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -90,7 +90,6 @@ h3 {
 }
 
 .icon-container {
-  background-color: brown;
   display: flex;
   justify-content:center;
   gap: 50px
@@ -115,6 +114,7 @@ h3 {
 
 
 #div1 .services {
+  align-content: center;
   text-align: center;
   position: absolute;
   color: white;
